# KnifE

./: README.md  pyproject.toml  setup.sh
knife/: __init__.py  __main__.py
knife.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
knife/cli/: main.py
knife/core/: config.py  memory.py  monitor.py  network.py  policy.py  priority.py
knife/gui/: app.py
knife/utils/: platform.py  units.py
tests/: test_cli.py  test_config.py  test_monitor.py  test_policy.py  test_units.py
